# autorunner

./: .env.example  .gitignore  Cargo.toml  README.md  running.json
.github/workflows/: sync-running.yml
scripts/: generate_running_js.py
src/: client.rs  main.rs  models.rs  output.rs
website/js/data/: running.js
